uptime-kuma/service-push-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-push
  namespace: uptime-kuma
spec:
  selector:
    app: uptime-kuma
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 30301
  type: NodePort
